bug fix - Fixed bug in label alignement in Folder properties from the group panel - Fixed bug in label alignement when Element_highlightLastchanges = 1 and the class used is the default updatedRecently which adds a border of 5px on the right

--- a/www/assets/css/src/32 wigii-bootstrap.css
+++ b/www/assets/css/src/32 wigii-bootstrap.css
@@ -44,8 +44,8 @@ body {
 	-moz-box-sizing: border-box;
 }
 
-#workZone div.elementDialog.docked, 
-#workZone div.elementDialog.docked *,
+#workZone div.elementDialog, 
+#workZone div.elementDialog *,
 #workZone #adminWorkZone div#elementDetail,
 #workZone #adminWorkZone div#elementDetail * 
 {
